fix z-index so both circles appear

--- a/src/components/GlassCreditCard/GlassCreditCard.css
+++ b/src/components/GlassCreditCard/GlassCreditCard.css
@@ -30,6 +30,7 @@
   background: -moz-radial-gradient(top right, #ffe897, #f98a05);
   background: radial-gradient(to bottom left, #ffe897, #f98a05);
   background: -webkit-radial-gradient(top right, #ffe897, #f98a05);
+  z-index: 2;
 }
 .holder:after {
   animation-delay: -2.5s;
@@ -39,7 +40,7 @@
   background: -webkit-radial-gradient(bottom right, #e0e793, #6dd0f1);
   right: 0;
   top: 0;
-  z-index: -1;
+  z-index: 1;
 }
 
 .card {
@@ -51,6 +52,7 @@
   overflow: hidden;
   position: relative;
   width: 370px;
+  z-index: 3
 }
 .card:before {
   background-color: rgba(255, 255, 255, 0.3);
@@ -66,7 +68,7 @@
   margin-left: 30px;
   margin-top: 100px;
   position: relative;
-  z-index: 2;
+  z-index: 5;
 }
 .card svg {
   bottom: 30px;
